--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
     "react-syntax-highlighter/": "https://aistudiocdn.com/react-syntax-highlighter@^16.1.0/",
     "react-syntax-highlighter": "https://aistudiocdn.com/react-syntax-highlighter@^16.1.0",
-    "uuid": "https://aistudiocdn.com/uuid@^13.0.0"
+    "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
+    "node-llama-cpp": "https://aistudiocdn.com/node-llama-cpp@^3.14.2"
   }
 }
 </script>
